--- a/reflections/pages/moments-of-solitude/read.html
+++ b/reflections/pages/moments-of-solitude/read.html
@@ -43,7 +43,7 @@
 <body>
   <header>
     <div class="wrap">
-      <a class="back" href="/reflections/pages/moments-of-solitude/index.html">← Back to Reflections</a>
+      <a class="back" href="/reflections/index.html">← Back to Reflections</a>
       <a class="dl" href="./moments-of-solitude.pdf" download>Download PDF</a>
     </div>
   </header>
