--- a/reflections/pages/moments-of-solitude/index.html
+++ b/reflections/pages/moments-of-solitude/index.html
@@ -46,7 +46,7 @@
 <body>
   <header>
     <img src="reflections/IMG_0690.png" alt="Stone Grill Logo">
-    <h1>Ninox Reflections</h1>
+    <h1>Moments of Solitude</h1>
   </header>
 
   <main>
