--- a/reflections/pages/moments-of-solitude/read.html
+++ b/reflections/pages/moments-of-solitude/read.html
@@ -101,7 +101,7 @@
 
   <footer>
     <div class="wrap" style="display:block; text-align:center;">
-      <a class="back" href="/reflections/pages/index.html" style="color:var(--accent); text-decoration:none; font-weight:700">← Back to Reflections</a>
+      <a class="back" href="/reflections/index.html" style="color:var(--accent); text-decoration:none; font-weight:700">← Back to Reflections</a>
     </div>
   </footer>
   <!-- ===== Floating TTS Reader (drop-in) ===== -->
