--- a/reflections/pages/moments-of-solitude/index.html
+++ b/reflections/pages/moments-of-solitude/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Moments of Solitude — Stone Grill Reflections</title>
   <meta name="description" content="A quiet invitation to stillness and presence.">
-  <link rel="icon" href="/IMG_0690">
+  <link rel="icon" href="/reflections/pages/moments-of-solitude/IMG_0690">
   <style>
     :root{
       --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d;
