--- a/reflections/pages/moments-of-solitude/read.html
+++ b/reflections/pages/moments-of-solitude/read.html
@@ -100,7 +100,7 @@
   </main>
 
   <footer>
-    <div class="wrap" style="display:block; text-align:center;">
+    <div class="wrap" style="display:flex; text-align:left;">
       <a class="back" href="/reflections/index.html" style="color:var(--accent); text-decoration:none; font-weight:700">← Back to Reflections</a>
     </div>
   </footer>
