--- a/reflections/pages/oneness-duality/read.html
+++ b/reflections/pages/oneness-duality/read.html
@@ -48,7 +48,7 @@ footer{
 </head>
 <body>
 <header>
-  <div class="wrap" style="display:block; text-align:center;">
+  <div class="wrap" style="display:flex; text-align:center;">
       <a class="back" href="/reflections/index.html" style="color:var(--accent); text-decoration:none; font-weight:700">← Back to Reflections</a>
     </div>
   <h1>Oneness & Duality</h1>
