--- a/reflections/pages/oneness-duality/read.html
+++ b/reflections/pages/oneness-duality/read.html
@@ -48,13 +48,12 @@ footer{
 </head>
 <body>
 <header>
-  <div class="wrap" style="display:flex; text-align:center;">
-      <a class="back" href="/reflections/index.html" style="color:var(--accent); text-decoration:none; font-weight:700">← Back to Reflections</a>
-    </div>
+<div class="back-button">
+  <a href="/reflections/index.html">← Back to Reflections</a>
+</div>
   <h1>Oneness & Duality</h1>
   <h2>The Space Where Duality Acts</h2>
-  <p>by Ninox Antolihao</p>
-  <p>Stone Grill Press · Leyte, Philippines · First Edition -- 2025</p>
+  <p>First Edition -- 2025</p>
 </header>
 
 <section>
