--- a/reflections/pages/oneness-duality/read.html
+++ b/reflections/pages/oneness-duality/read.html
@@ -6,6 +6,25 @@
 <title>Oneness & Duality -- Ninox Antolihao</title>
 <link rel="icon" href="/reflections/assets/favicon.ico">
 <style>
+.back-button {
+  text-align: center;
+  margin: 40px 0;
+}
+
+.back-button a {
+  color: #ff6b3d;              /* 🔸 Orange text color */
+  text-decoration: none;
+  font-weight: 600;
+  padding: 10px 20px;
+  border: 2px solid #ff6b3d;   /* 🔸 Orange border */
+  border-radius: 8px;
+  transition: all 0.3s ease;
+}
+
+.back-button a:hover {
+  background: #ff6b3d;         /* 🔸 Orange background when hovered */
+  color: #fff;                 /* White text on hover */
+}
 body{
   font-family:'Georgia',serif;
   background:#fffdf9;
