--- a/reflections/pages/triune-reflection/read.html
+++ b/reflections/pages/triune-reflection/read.html
@@ -6,6 +6,27 @@
 <title>The Triune Reflection — Ninox Antolihao</title>
 <link rel="icon" href="/reflections/assets/favicon.ico">
 <style>
+
+.back-button {
+  text-align: center;
+  margin: 40px 0;
+}
+
+.back-button a {
+  color: #ff6b3d;              /* 🔸 Orange text color */
+  text-decoration: none;
+  font-weight: 400;
+  padding: 8px 16px;
+  border: 2px solid #ff6b3d;   /* 🔸 Orange border */
+  border-radius: 8px;
+  transition: all 0.3s ease;
+}
+
+.back-button a:hover {
+  background: #ff6b3d;         /* 🔸 Orange background when hovered */
+  color: #fff;                 /* White text on hover */
+}
+
 body{
   font-family:'Georgia',serif;
   background:#fffdf9;
@@ -135,6 +156,9 @@ footer{
 <blockquote>“I don’t write to teach,” he says. “I write to remember—and to help others remember too.”</blockquote>
 
 <footer>
+  <div class="back-button">
+  <a href="/reflections/index.html">← Back to Reflections</a>
+</div>
   <p>Stone Grill Press · Leyte, Philippines · © 2025 Ninox Antolihao<br>First Edition — 2025</p>
 </footer>
 
