--- a/reflections/pages/triune-reflection/read.html
+++ b/reflections/pages/triune-reflection/read.html
@@ -13,18 +13,19 @@
 }
 
 .back-button a {
-  color: #ff6b3d;              /* 🔸 Orange text color */
+  background: #ff6b3d;      /* 🔸 Bright orange background */
+  color: #ffffff;            /* 🔸 White font */
   text-decoration: none;
-  font-weight: 400;
-  padding: 8px 16px;
-  border: 2px solid #ff6b3d;   /* 🔸 Orange border */
+  font-weight: 600;
+  padding: 10px 24px;
   border-radius: 8px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.25);
   transition: all 0.3s ease;
 }
 
 .back-button a:hover {
-  background: #ff6b3d;         /* 🔸 Orange background when hovered */
-  color: #fff;                 /* White text on hover */
+  background: #e65c2c;       /* Darker orange on hover */
+  transform: translateY(-2px);
 }
 
 body{
