--- a/reflections/pages/belief/index.html
+++ b/reflections/pages/belief/index.html
@@ -49,6 +49,27 @@
   </script>
 
   <style>
+    .back-button {
+  text-align: center;
+  margin: 40px 0;
+}
+
+.back-button a {
+  background: #ff6b3d;      /* 🔸 Bright orange background */
+  color: #ffffff;            /* 🔸 White font */
+  text-decoration: none;
+  font-weight: 600;
+  padding: 10px 24px;
+  border-radius: 8px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.25);
+  transition: all 0.3s ease;
+}
+
+.back-button a:hover {
+  background: #e65c2c;       /* Darker orange on hover */
+  transform: translateY(-2px);
+}
+  
     :root{
       --bg:#1f1815; --paper:#29211e; --ink:#f3e6dd; --muted:#c9b0a4; --accent:#ff6a3d;
     }
@@ -93,6 +114,11 @@
   </style>
 </head>
 <body>
+  
+  <div class="back-button">
+  <a href="/reflections/index.html">← Back to Reflections</a>
+</div>
+  
   <div class="wrap">
     <header>
       <!-- Make the cover clickable to open the image (or your PDF if you prefer) -->
