--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -7,7 +7,7 @@
   <meta name="description" content="A reflection by Ninox Antolihao exploring how humanity shapes its vision of God.">
   <meta property="og:title" content="The God We Created — Ninox Antolihao">
   <meta property="og:description" content="A reflection that challenges the idea of a human-shaped God and invites the reader toward inner awakening.">
-  <meta property="og:image" content="/reflections/pages/the-god-we-created/cover.jpg">
+  <meta property="og:image" content="/11EFF0F0-7760-4F66-9581-D2B1F2DD522E.png">
   <link rel="icon" href="/reflections/assets/favicon.ico">
 
   <style>
