--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>The God We Created </title>
   <meta name="description" content="A reflection by Ninox Antolihao exploring how humanity shapes its vision of God.">
-  <meta property="og:title" content="The God We Created — Ninox Antolihao">
+  <meta property="og:title" content="The God We Created ">
   <meta property="og:description" content="A reflection that challenges the idea of a human-shaped God and invites the reader toward inner awakening.">
-  <meta property="og:image" content="/ https://stonegrillresto.net/reflections/pages/the-god-we-created/11EFF0F0-7760-4F66-9581-D2B1F2DD522E.png">
+  <meta property="og:image" content="/https://stonegrillresto.net/reflections/pages/the-god-we-created/11EFF0F0-7760-4F66-9581-D2B1F2DD522E.png">
   <link rel="icon" href="/reflections/assets/favicon.ico">
 
   <style>
@@ -81,7 +81,7 @@
 <body>
   <main>
     <header>
-      <img src="/11EFF0F0-7760-4F66-9581-D2B1F2DD522E.png" alt="Stone Grill Logo">
+      <img src="11EFF0F0-7760-4F66-9581-D2B1F2DD522E.png" alt="Stone Grill Logo">
       <h1>The God We Created</h1>
       <p class="meta">By Ninox Antolihao • First Edition — 2025</p>
     </header>
