--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -81,9 +81,10 @@
 <body>
   <main>
     <header>
-      <img src="11EFF0F0-7760-4F66-9581-D2B1F2DD522E.png" alt="Stone Grill Logo">
-      <h1>The God We Created</h1>
-      <p class="meta">By Ninox Antolihao • First Edition — 2025</p>
+     <img 
+  src="https://stonegrillresto.net/reflections/pages/the-god-we-created/11EFF0F0-7760-4F66-9581-D2B1F2DD522E.png"
+  alt="The God We Created cover"
+  style="display:block;margin:0 auto 20px;max-width:100%;border-radius:6px;box-shadow:0 0 12px rgba(0,0,0,0.3);">
     </header>
 
     <a href="/reflections/index.html" class="back">← Back to Reflections</a>
