--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -94,7 +94,7 @@
 
     <h2>Introduction</h2>
     <p>There comes a point when belief alone no longer satisfies the soul. When questions grow louder than the answers we were taught to accept. And when our heart whispers a deeper truth that tradition never dared to say aloud. This reflection was born at that edge—between what we were told and what we now sense.</p>
-    <p>This is not a rejection of God. It is an unmasking of a version of God—one shaped too closely to our own image. A version with needs, tempers, favorites, and enemies. A version designed for control, not freedom. As you read, I invite you not to react, but to listen. Let the words disturb you if they must. Let them stretch the walls of your inner temple. And perhaps, let them awaken the part of you that always knew: the truth was never far—it was just buried beneath the noise.</p>
+    <p>This is not a rejection of God. It is an unmasking of a version of God—one shaped too closely to our own image. A version without needs, tempers, favorites, and enemies. A version designed not for control, but freedom. As you read, I invite you not to react, but to listen. Let the words disturb you if they must. Let them stretch the walls of your inner temple. And perhaps, let them awaken the part of you that always knew: the truth was never far—it was just buried beneath the noise.</p>
 
     <h2>The God We Created</h2>
     <p>For centuries, we were told that we are the center of creation. That all things—earth, sky, stars—were made for us. That we are God’s masterpiece. His image. His prize.</p>
