--- a/reflections/index.html
+++ b/reflections/index.html
@@ -12,6 +12,14 @@
 <meta property="og:image:alt" content="A Journey from Duality to Oneness">
 
   <style>
+  
+  .btn.secondary[href$=".mp3"] {
+  background-color: #ff6b2b;
+  color: #fff;
+}
+.btn.secondary[href$=".mp3"]:hover {
+  background-color: #ff8752;
+}
     /* ===== Theme ===== */
     :root{
       --bg:#1f1815; --paper:#2a211e; --ink:#f3e6dd; --muted:#c9b0a4;
@@ -148,28 +156,35 @@
       </article>
 
       <!-- ==== The God We Created ==== -->
-      <article class="card">
-        <div class="left">
-          <a class="book-link" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">
-            <img class="book-cover"
-                 src="/reflections/pages/the-god-we-created/11EFF0F0-7760-4F66-9581-D2B1F2DD522E.png"
-                 alt="god we create cover"
-                 onerror="this.src='/reflections/assets/placeholder.jpg'">
-          </a>
-        </div>
-        <div class="right">
-          <h3><a class="title-link" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">
-              The God We Created</a></h3>
-          <p>Do you think recognizing that our concept of God has evolved helps or hinders interfaith dialogue?</p>
-          <div class="meta">First Edition 2025 •
-            <a class="title-link" href="/reflections/pages/the-god-we-created/The_God_We_created.pdf">PDF</a>
-          </div>
-          <div class="cover-actions">
-            <a class="btn" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">Read</a>
-            <a class="btn secondary" href="/reflections/pages/the-god-we-created/The_God_We_created.pdf">Download</a>
-          </div>
-        </div>
-      </article>
+<article class="card">
+  <div class="left">
+    <a class="book-link" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">
+      <img class="book-cover"
+           src="/reflections/pages/the-god-we-created/11EFF0F0-7760-4F66-9581-D2B1F2DD522E.png"
+           alt="The God We Created cover"
+           onerror="this.src='/reflections/assets/placeholder.jpg'">
+    </a>
+  </div>
+
+  <div class="right">
+    <h3>
+      <a class="title-link" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">
+        The God We Created
+      </a>
+    </h3>
+    <p>Do you think recognizing that our concept of God has evolved helps or hinders interfaith dialogue?</p>
+
+    <div class="meta">
+      First Edition 2025 • 
+      <a class="title-link" href="/reflections/pages/the-god-we-created/read.html">Read Version</a>
+    </div>
+
+    <div class="cover-actions">
+      <a class="btn" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">Read</a>
+      <a class="btn secondary" href="/reflections/pages/the-god-we-created/The_God_We_created.mp3" target="_blank" rel="noopener">Listen</a>
+    </div>
+  </div>
+</article>
      
 
       
