--- a/reflections/index.html
+++ b/reflections/index.html
@@ -13,12 +13,16 @@
 
   <style>
   
-  .btn.secondary[href$=".mp3"] {
+.btn.secondary {
   background-color: #ff6b2b;
   color: #fff;
 }
-.btn.secondary[href$=".mp3"]:hover {
-  background-color: #ff8752;
+.btn.secondary:hover {
+  background-color: #ff8b56;
+}
+.audio-player audio {
+  border-radius: 6px;
+  outline: none;
 }
     /* ===== Theme ===== */
     :root{
@@ -176,15 +180,32 @@
 
     <div class="meta">
       First Edition 2025 • 
-      <a class="title-link" href="/reflections/pages/the-god-we-created/read.html">Read Version</a>
+      <a class="title-link" href="/reflections/pages/the-god-we-created/The_God_We_created.pdf">PDF</a>
     </div>
 
     <div class="cover-actions">
       <a class="btn" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">Read</a>
-      <a class="btn secondary" href="/reflections/pages/the-god-we-created/the-god-we-create.mp3" target="_blank" rel="noopener">Listen</a>
+      <button class="btn secondary" onclick="toggleAudio(this)">Listen</button>
+    </div>
+
+    <!-- Inline audio player (hidden by default) -->
+    <div class="audio-player" style="display:none; margin-top:10px;">
+      <audio controls preload="none" style="width:100%;">
+        <source src="/reflections/pages/the-god-we-created/The_God_We_created.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
     </div>
   </div>
 </article>
+
+<script>
+function toggleAudio(button) {
+  const player = button.closest('.right').querySelector('.audio-player');
+  const isVisible = player.style.display === 'block';
+  player.style.display = isVisible ? 'none' : 'block';
+  button.textContent = isVisible ? 'Listen' : 'Hide Player';
+}
+</script>
      
 
       
