--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -86,6 +86,15 @@
   alt="The God We Created cover"
   style="display:block;margin:0 auto 20px;max-width:100%;border-radius:6px;box-shadow:0 0 12px rgba(0,0,0,0.3);">
     </header>
+    
+  <audio id="narration" src="/reflections/pages/the-god-we-created/The_God_We_created.mp3" autoplay muted loop></audio>
+<script>
+  // Allow unmuting when user clicks anywhere
+  document.addEventListener('click', () => {
+    const a = document.getElementById('narration');
+    a.muted = false;
+  }, { once: true });
+</script>
 
     <a href="/reflections/index.html" class="back">← Back to Reflections</a>
 
