--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -80,21 +80,20 @@
 
 <body>
   <main>
-    <header>
-     <img 
-  src="https://stonegrillresto.net/reflections/pages/the-god-we-created/11EFF0F0-7760-4F66-9581-D2B1F2DD522E.png"
-  alt="The God We Created cover"
-  style="display:block;margin:0 auto 20px;max-width:100%;border-radius:6px;box-shadow:0 0 12px rgba(0,0,0,0.3);">
-    </header>
-    
-  <audio id="narration" src="/reflections/pages/the-god-we-created/the-god-we-create.mp3" autoplay muted loop></audio>
-<script>
-  // Allow unmuting when user clicks anywhere
-  document.addEventListener('click', () => {
-    const a = document.getElementById('narration');
-    a.muted = false;
-  }, { once: true });
-</script>
+  <!-- Inside read.html -->
+<header>
+  <img src="/reflections/assets/logo.png" alt="Stone Grill Logo">
+  <h1>The God We Created</h1>
+  <p class="meta">By Ninox Antolihao • First Edition — 2025</p>
+</header>
+
+<!-- 🎧 Inline audio player -->
+<div class="audio-section" style="text-align:center; margin: 1.5em 0;">
+  <audio controls preload="none" style="width:90%; max-width:600px; border-radius:6px;">
+    <source src="/reflections/pages/the-god-we-created/The_God_We_created.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</div>
 
     <a href="/reflections/index.html" class="back">← Back to Reflections</a>
 
