--- a/reflections/pages/oneness-duality/index2.html
+++ b/reflections/pages/oneness-duality/index2.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Oneness and Duality — Stone Grill Reflections</title>
-  <meta name="description" content="Afascinating course through philosophy, theology, and psychology, ultimately converging on a single, profound idea of Oneness and Dualty">
+  <meta name="description" content="Beyond the Veil of Separation">
   <link rel="icon" href="/IMG_0690.png">
     <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/oneness-duality/oneness-duality.png">
 <meta property="og:image:width" content="240">
