--- a/reflections/pages/oneness-duality/read.html
+++ b/reflections/pages/oneness-duality/read.html
@@ -88,7 +88,7 @@ footer{
     <a href="/reflections/index.html">← Back to Reflections</a>
   </div>
   <h1>Oneness & Duality</h1>
-  <h2>The Space Where Duality Acts</h2>
+  <h2>Beyond the Veil of Separation</h2>
   <p>First Edition -- 2025</p>
 </header>
 
