--- a/reflections/pages/belief/index.html
+++ b/reflections/pages/belief/index.html
@@ -138,7 +138,15 @@
      <div class="back-button">
       <a href="/reflections/index.html">← Back to Reflections</a>
     </div>
-
+    
+     <!-- 🎧 Inline audio player -->
+<div class="audio-section" style="text-align:center; margin: 1.5em 0;">
+  <audio controls preload="none" style="width:90%; max-width:600px; border-radius:6px;">
+    <source src="/reflections/pages/belief/beliefxgood.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</div>
+    
     <main>
       <h1 class="read">Belief and Goodness</h1>
       <h2 class="subtitle"><em>Belief is awareness — not alignment.</em></h2>
