--- a/reflections/index.html
+++ b/reflections/index.html
@@ -247,6 +247,13 @@ function toggleAudio(button) {
           <h3><a class="title-link" href="/reflections/pages/belief/index.html" target="_blank" rel="noopener">
               Belief and Goodness</a></h3>
           <p>Belief shows awareness of the light, but goodness is walking toward it.</p>
+          <!-- 🎧 Inline audio player -->
+<div class="audio-section" style="text-align:center; margin: 1.5em 0;">
+  <audio controls preload="none" style="width:90%; max-width:600px; border-radius:6px;">
+    <source src="/reflections/pages/belief/beliefxgood.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</div>
           <div class="meta">First Edition 2025 • Essay ·
             <a class="title-link" href="/reflections/pages/belief/belief.pdf">PDF</a>
           </div>
