--- a/reflections/index.html
+++ b/reflections/index.html
@@ -343,5 +343,23 @@ function toggleAudio(button) {
     © 2025 Stone Grill Restaurant ·
     <a href="tel:0535680539">Call 053 568 0539</a>
   </footer>
+  <script>
+// === Omnibus Audio Embed System ===
+// Usage: createAudioPlayer('beliefxgood.mp3', 'Belief and Goodness')
+
+function createAudioPlayer(src, title) {
+  return `
+  <div class="audio-section">
+    <p class="audio-label">🎧 Audio Reflection: <strong>${title}</strong></p>
+    <audio controls preload="auto" class="audio-player">
+      <source src="${src}" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+    <button class="audio-stop" onclick="this.previousElementSibling.pause(); this.previousElementSibling.currentTime=0;">
+      ⏹ Stop
+    </button>
+  </div>`;
+}
+</script>
 </body>
 </html>
