--- a/reflections/index.html
+++ b/reflections/index.html
@@ -12,6 +12,12 @@
 <meta property="og:image:alt" content="A Journey from Duality to Oneness">
 
   <style>
+  
+  .audio-section{text-align:center;margin:1.5em 0;}
+.audio-label{font-size:1.1em;color:#ffb380;margin-bottom:0.5em;}
+.audio-player{width:95%;max-width:650px;height:40px;border-radius:6px;background-color:#2b201d;}
+.audio-stop{margin-top:0.6em;background-color:#ff6b2b;color:#fff;border:none;padding:6px 14px;border-radius:6px;cursor:pointer;}
+.audio-stop:hover{background-color:#ff8752;}
 
     /* ===== Theme ===== */
     :root{
