--- a/reflections/index.html
+++ b/reflections/index.html
@@ -105,6 +105,49 @@
   <main class="wrap">
     <section class="grid">
 
+     <!-- ==== DIETY ==== -->
+<article class="card">
+  <div class="left">
+    <a class="book-link" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">
+      <img class="book-cover"
+           src="/reflections/pages/the-god-we-created/thegodwecreated.png"
+           alt="The God We Created cover"
+           onerror="this.src='/reflections/assets/placeholder.jpg'">
+    </a>
+  </div>
+
+  <div class="right">
+    <h3>
+      <a class="title-link" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">
+        The God We Created
+      </a>
+    </h3>
+
+    <p>Do you think recognizing that our concept of God has evolved helps or hinders interfaith dialogue?</p>
+
+    <div class="meta">
+      First Edition 2025 • 
+      <a class="title-link" href="/reflections/pages/the-god-we-created/The_God_We_created.pdf">PDF</a>
+    </div>
+
+    <div class="cover-actions">
+      <a class="btn" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">Read</a>
+      <a class="btn secondary" href="/reflections/pages/the-god-we-created/The_God_We_created.pdf">Download</a>
+    </div>
+
+    <!-- 🎧 Audio Player -->
+    <script>
+      document.write(createAudioPlayer(
+        '/reflections/pages/the-god-we-created/the-god-we-create.mp3',
+        'The God We Created'
+      ));
+    </script>
+
+  </div>
+</article>
+
+      
+      
       <!-- ==== The Triune Reflection ==== -->
       <article class="card">
         <div class="left">
@@ -331,5 +374,10 @@ function toggleAudio(button) {
     © 2025 Stone Grill Restaurant ·
     <a href="tel:0535680539">Call 053 568 0539</a>
   </footer>
+  <!-- Link the Omnibus Audio System -->
+<script src="/reflections/assets/audio-system.js"></script>
+</body>
+</html>
+
 </body>
 </html>
