--- a/reflections/index.html
+++ b/reflections/index.html
@@ -105,40 +105,41 @@
   <main class="wrap">
     <section class="grid">
 
-     <!-- ==== DIETY ==== -->
+    
+<!-- ==== DIETY ==== -->
 <article class="card">
   <div class="left">
-    <a class="book-link" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">
+    <a class="book-link" href="/reflections/pages/diety/read.html" target="_blank" rel="noopener">
       <img class="book-cover"
-           src="/reflections/pages/the-god-we-created/thegodwecreated.png"
-           alt="The God We Created cover"
+           src="/reflections/pages/diety/thegodwecreated.png"
+           alt="diety cover"
            onerror="this.src='/reflections/assets/placeholder.jpg'">
     </a>
   </div>
 
   <div class="right">
     <h3>
-      <a class="title-link" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">
-        The God We Created
+      <a class="title-link" href="/reflections/pages/diety/read.html" target="_blank" rel="noopener">
+        Diety
       </a>
     </h3>
 
-    <p>Do you think recognizing that our concept of God has evolved helps or hinders interfaith dialogue?</p>
+    <p>Reflection on the True Divine?</p>
 
     <div class="meta">
       First Edition 2025 • 
-      <a class="title-link" href="/reflections/pages/the-god-we-created/The_God_We_created.pdf">PDF</a>
+      <a class="title-link" href="/reflections/pages/diety/The_God_We_created.pdf">PDF</a>
     </div>
 
     <div class="cover-actions">
-      <a class="btn" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">Read</a>
-      <a class="btn secondary" href="/reflections/pages/the-god-we-created/The_God_We_created.pdf">Download</a>
+      <a class="btn" href="/reflections/pages/diety/read.html" target="_blank" rel="noopener">Read</a>
+      <a class="btn secondary" href="/reflections/pages/diety/The_God_We_created.pdf">Download</a>
     </div>
 
     <!-- 🎧 Audio Player -->
     <script>
       document.write(createAudioPlayer(
-        '/reflections/pages/the-god-we-created/the-god-we-create.mp3',
+        '/reflections/pages/diety/diety.mp3',
         'The God We Created'
       ));
     </script>
