--- a/reflections/index.html
+++ b/reflections/index.html
@@ -128,12 +128,12 @@
 
     <div class="meta">
       First Edition 2025 • 
-      <a class="title-link" href="/reflections/pages/diety/The_God_We_created.pdf">PDF</a>
+      <a class="title-link" href="/reflections/pages/diety/The_False_God_Reflection_by_Ninox copy.pdf">PDF</a>
     </div>
 
     <div class="cover-actions">
       <a class="btn" href="/reflections/pages/diety/read.html" target="_blank" rel="noopener">Read</a>
-      <a class="btn secondary" href="/reflections/pages/diety/The_God_We_created.pdf">Download</a>
+      <a class="btn secondary" href="/reflections/pages/diety/The_False_God_Reflection_by_Ninox copy.pdf">Download</a>
     </div>
 
     <!-- 🎧 Audio Player -->
