--- a/reflections/index.html
+++ b/reflections/index.html
@@ -111,7 +111,7 @@
   <div class="left">
     <a class="book-link" href="/reflections/pages/diety/read.html" target="_blank" rel="noopener">
       <img class="book-cover"
-           src="/reflections/pages/diety/thegodwecreated.png"
+           src="/reflections/pages/diety/diety.jpg"
            alt="diety cover"
            onerror="this.src='/reflections/assets/placeholder.jpg'">
     </a>
