--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>The False God — Ninox Antolihao</title>
+  <title>Diety — Ninox Antolihao</title>
   <meta name="description" content="A Gnostic Reflection on the True Divine — by Ninox Antolihao">
   <link rel="icon" href="/reflections/assets/favicon.ico">
 
   <!-- Open Graph (for sharing) -->
-  <meta property="og:title" content="The False God — A Gnostic Reflection on the True Divine">
+  <meta property="og:title" content="The Diety — A Gnostic Reflection on the True Divine">
   <meta property="og:description" content="What if the god of this world is not the true God? A Gnostic reflection by Ninox Antolihao.">
   <meta property="og:image" content="/reflections/pages/diety/diety-cover.png">
 
@@ -19,7 +19,7 @@
 <body>
   <header>
     <img src="/reflections/assets/logo.png" alt="Stone Grill Logo">
-    <h1>The False God</h1>
+    <h1>The Diety</h1>
     <p class="meta">A Gnostic Reflection on the True Divine — Ninox Antolihao • First Edition 2025</p>
   </header>
 
