--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -10,7 +10,7 @@
   <!-- Open Graph (for sharing) -->
   <meta property="og:title" content="The Diety — A Gnostic Reflection on the True Divine">
   <meta property="og:description" content="What if the god of this world is not the true God? A Gnostic reflection by Ninox Antolihao.">
-  <meta property="og:image" content="/reflections/pages/diety/diety-cover.png">
+  <meta property="og:image" content="/reflections/pages/diety/diety.jpg">
 
   <!-- Styles -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css">
